[gd_scene load_steps=13 format=3 uid="uid://dnoq6gw7imio3"]

[ext_resource type="PackedScene" uid="uid://bo4xvvcabdlik" path="res://scenes/managers/scene_manager.tscn" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dub1b3f8e2v5a" path="res://scenes/managers/audio_manager.tscn" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://cg6ofrnh6up5w" path="res://scenes/managers/game_data.tscn" id="3_iywne"]
[ext_resource type="Script" uid="uid://qwei4nq02xow" path="res://scenes/main_menu.gd" id="4_iywne"]
[ext_resource type="PackedScene" uid="uid://7p3caqed67be" path="res://scenes/world.tscn" id="4_lbhrr"]
[ext_resource type="Texture2D" uid="uid://b1rminomcnyo5" path="res://assets/ui/playerinfo.png" id="5_gee14"]
[ext_resource type="Script" uid="uid://cq80vmh053868" path="res://scenes/settings.gd" id="5_kvpfn"]
[ext_resource type="PackedScene" uid="uid://dgx6lqroxutd5" path="res://scenes/components/health_bar.tscn" id="6_0tnpc"]
[ext_resource type="FontFile" uid="uid://cw1fu4g1orqhd" path="res://assets/ui/MinimalPixel v2.ttf" id="7_vtaks"]
[ext_resource type="PackedScene" uid="uid://dm6q0abakck7u" path="res://scenes/components/joystick.tscn" id="8_vtaks"]
[ext_resource type="PackedScene" uid="uid://ba6jo7xbq72sm" path="res://scenes/skills/skill_button.tscn" id="9_kvpfn"]

[sub_resource type="Theme" id="Theme_kvpfn"]
default_base_scale = 1.0
default_font = ExtResource("7_vtaks")
default_font_size = 28

[node name="Game" type="Node2D"]

[node name="SceneManager" parent="." instance=ExtResource("1_lnu2h")]

[node name="AudioManager" parent="." instance=ExtResource("2_lbhrr")]

[node name="GameData" parent="." instance=ExtResource("3_iywne")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 493.0
offset_bottom = 236.0
script = ExtResource("4_iywne")

[node name="Title" type="Label" parent="UI/MainMenu"]
layout_mode = 0
offset_left = 353.0
offset_top = 61.0
offset_right = 393.0
offset_bottom = 84.0
text = "GRAVEBOUND"

[node name="Play" type="Button" parent="UI/MainMenu"]
layout_mode = 0
offset_left = 279.0
offset_top = 126.0
offset_right = 547.0
offset_bottom = 268.0
text = "PLAY
"

[node name="Settings" type="Button" parent="UI/MainMenu"]
layout_mode = 0
offset_left = 277.0
offset_top = 300.0
offset_right = 545.0
offset_bottom = 442.0
text = "OPTIONS
"

[node name="Settings" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_kvpfn")

[node name="Title" type="Label" parent="UI/Settings"]
layout_mode = 0
offset_left = 358.0
offset_top = 27.0
offset_right = 420.0
offset_bottom = 98.0
text = "Settings
 "

[node name="Volume Control" type="HSlider" parent="UI/Settings"]
layout_mode = 0
offset_left = 161.0
offset_top = 205.0
offset_right = 629.0
offset_bottom = 244.0

[node name="Label" type="Label" parent="UI/Settings"]
layout_mode = 0
offset_left = 359.0
offset_top = 163.0
offset_right = 418.0
offset_bottom = 186.0
text = "Volume"

[node name="GameHUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerInformation" type="NinePatchRect" parent="UI/GameHUD"]
layout_mode = 0
offset_left = 17.0
offset_top = 15.0
offset_right = 251.0
offset_bottom = 87.0
texture = ExtResource("5_gee14")

[node name="HealthBar" parent="UI/GameHUD/PlayerInformation" node_paths=PackedStringArray("health_component") instance=ExtResource("6_0tnpc")]
position = Vector2(107, 6)
scale = Vector2(3.1, 3)
health_component = NodePath("../../../../GameWorld/Player/HealthComponent")

[node name="Score" type="Label" parent="UI/GameHUD/PlayerInformation"]
layout_mode = 2
offset_left = 82.0
offset_top = 32.0
offset_right = 282.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme = SubResource("Theme_kvpfn")
text = "0"
horizontal_alignment = 2

[node name="WaveLabel" type="Label" parent="UI/GameHUD/PlayerInformation"]
layout_mode = 0
offset_left = 691.0
offset_top = 17.0
offset_right = 738.0
offset_bottom = 40.0
text = "Wave "

[node name="Joystick" parent="UI/GameHUD" node_paths=PackedStringArray("player") instance=ExtResource("8_vtaks")]
position = Vector2(105, 492)
player = NodePath("../../../GameWorld/Player")

[node name="SkillButton" parent="UI/GameHUD" instance=ExtResource("9_kvpfn")]
position = Vector2(687, 489)

[node name="PerksPanel" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameOverScreen" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TransitionOverlay" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameWorld" parent="." instance=ExtResource("4_lbhrr")]
visible = false

[connection signal="pressed" from="UI/MainMenu/Play" to="UI/MainMenu" method="_on_play_pressed"]
[connection signal="pressed" from="UI/MainMenu/Settings" to="UI/MainMenu" method="_on_settings_pressed"]

[editable path="GameWorld"]
[editable path="GameWorld/Player"]
